--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
   "manifest_version": 2,
-
+  "author": "G.T.C. Laan (gtclaan.com)",
+  "homepage_url": "https://github.com/gtclaancom/samltoawsstskeys",
   "name": "SAML to AWS STS Keys Conversion",
   "description": "This extension picks up the SAML assertion when logging in to the AWS Webconsole using ADFS. Using the SAML assertion STS Keys are requested using the assumeRoleWithSAML API action.",
   "version": "1.0",
-
+  "icons": {  "16": "icons/icon_16.png",
+              "32": "icons/icon_32.png",
+              "48": "icons/icon_48.png",
+              "128": "icons/icon_128.png" },
   "browser_action": {
-    "default_icon": "icons/icon.png",
+    "default_icon": "icons/icon_32.png",
     "default_popup": "popup/popup.html"
   },
   "background": {
