Improve background.js by seperating logic/presentation and doing all additional assumeRoles async

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "ArrayBuffer": true,
         "Uint8Array": true,
         "DataView": true,
-        "AWS": true
+        "AWS": true,
+        "Promise": true
     },
     "extends": "eslint:recommended",
     "rules": {
