--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
+  "applications": {
+    "gecko": {
+      "id": "aws-saml@salsify.com"
+    }
+  },
   "manifest_version": 2,
   "author": "G.T.C. Laan (prolane.org)",
   "homepage_url": "https://github.com/prolane/samltoawsstskeys",
   "name": "SAML to AWS STS Keys Conversion",
   "description": "Generates file with AWS STS Keys after logging in to AWS webconsole using SSO (SAML 2.0). It leverages 'assumeRoleWithSAML' API.",
-  "version": "2.4",
+  "version": "3",
   "icons": {  "16": "icons/icon_16.png",
               "32": "icons/icon_32.png",
               "48": "icons/icon_48.png",
@@ -16,7 +21,9 @@
   "background": {
     "page": "background/background.html"
   },
-  "options_page": "options/options.html",
+  "options_ui": {
+    "page": "options/options.html"
+  },
   "permissions": [
     "webRequest",
     "https://signin.aws.amazon.com/saml",
