Update manifest to v3 requirements

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "author": "G.T.C. Laan (prolane.org)",
   "homepage_url": "https://github.com/prolane/samltoawsstskeys",
   "name": "SAML to AWS STS Keys Conversion",
@@ -9,18 +9,20 @@
               "32": "icons/icon_32.png",
               "48": "icons/icon_48.png",
               "128": "icons/icon_128.png" },
-  "browser_action": {
+  "action": {
     "default_icon": "icons/icon_32.png",
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "page": "background/background.html"
+    "service_worker": "background/script.js"
   },
   "options_page": "options/options.html",
   "permissions": [
     "webRequest",
-    "<all_urls>",
     "storage",
     "downloads"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ]
 }
